Added pictures of some people in the Elevhälsan.

--- a/Skylt/index.html
+++ b/Skylt/index.html
@@ -48,6 +48,12 @@
         {
             font-size: 50px;
         }
+
+        img
+        {
+            height: 400px;
+            max-width: 100%;
+        }
     </style>
 
 </head>
@@ -67,23 +73,20 @@
                     <div>
                         <h1>Robin Kastberg</h1>
                     </div>
-                    <div class="row border">
+                    <div class="row">
                         <div class="col">
                             <p>
                                 Jag är här för att klaga på din kod och allt du gör.<br />
                                 Om du ger mig kaffe så kanske jag klagar lite mindre.
                             </p>
                         </div>
-                        <div class="col">
-                            <p>
-                                TEL: 0007774433<br />
-                                Mail: Robin.kastberg@ntig.se
-                            </p>
+                        <div class="col text-center">
+                            <img src="Img/Profile/susanne300.jpg" />
                         </div>
                     </div>
                 </div>
                 <div class="carousel-item">
-                    <div class="border">
+                    <div>
                         <h1>Sarah Hagberg</h1>
                     </div>
                     <div class="row">
@@ -94,9 +97,8 @@
                                 FUS RO DAH!!!!
                             </p>
                         </div>
-                        <div class="col">
-                            TEL: 0007774433<br />
-                            Mail: Robin.kastberg@ntig.se<br />
+                        <div class="col text-center">
+                            <img src="Img/Profile/sarah300.2.jpg"/>
                         </div>
                     </div>
                 </div>
@@ -139,6 +141,190 @@
                         <div class="carousel-item">
                             <h2>General Grevious:</h2>
                             You fool, I've been trained in your jedi arts by Count Doku.
+                        </div>
+                        <div class="carousel-item">
+                            <h2>Vader:</h2>
+                            You are beaten. It is useless to resist.
+                        </div>
+                        <div class="carousel-item">
+                            <h2>Vader:</h2>
+                            Don't let yourself be destroyed as Obi-Wan did.
+                        </div>
+                        <div class="carousel-item">
+                            <h2></h2>
+                            [Vader severs Luke's right hand with his lightsaber..]
+                        </div>
+                        <div class="carousel-item">
+                            <h2>Luke</h2>
+                            Aaaaaaaaaaaaaaaa!!
+                        </div>
+                        <div class="carousel-item">
+                            <h2>Vader:</h2>
+                            There is no escape. Don't make me destroy you.
+                        </div>
+                        <div class="carousel-item">
+                            <h2>Vader:</h2>
+                            Luke, you do not yet realize your importance.
+                        </div>
+                        <div class="carousel-item">
+                            <h2>Vader:</h2>
+                            You've only begun to discover your power.
+                        </div>
+                        <div class="carousel-item">
+                            <h2>Vader:</h2>
+                            Join me, and I will complete your training.
+                        </div>
+                        <div class="carousel-item">
+                            <h2>Vader:</h2>
+                            With our combined strength, we can end this destructive conflict
+                        </div>
+                        <div class="carousel-item">
+                            <h2>Vader:</h2>
+                            and bring order to the galaxy!
+                        </div>
+                        <div class="carousel-item">
+                            <h2>Luke:</h2>
+                            I'll NEVER join you!
+                        </div>
+                        <div class="carousel-item">
+                            <h2>Vader:</h2>
+                            If only you knew the power of the dark side.
+                        </div>
+                        <div class="carousel-item">
+                            <h2>Vader:</h2>
+                            Obi-Wan never told you what happened to your father.
+                        </div>
+                        <div class="carousel-item">
+                            <h2>Luke:</h2>
+                            He told me enough. He told me you killed him.
+                        </div>
+                        <div class="carousel-item">
+                            <h2>Vader:</h2>
+                            No. I am your father.
+                        </div>
+                        <div class="carousel-item">
+                            <h2>Luke:</h2>
+                            Luke: [Shocked] No. No. That's not true! That's impossible!
+                        </div>
+                        <div class="carousel-item">
+                            <h2>Vader:</h2>
+                            Search your feelings, you know it to be true.
+                        </div>
+                        <div class="carousel-item">
+                            <h2>Obi-Wan:</h2>
+                            I have failed you, Anakin. I have failed you.
+                        </div>
+                        <div class="carousel-item">
+                            <h2>Anakin:</h2>
+                            I should have known the Jedi were plotting to take over.
+                        </div>
+                        <div class="carousel-item">
+                            <h2>Obi-Wan:</h2>
+                            Anakin, Chancellor Palpatine is evil!
+                        </div>
+                        <div class="carousel-item">
+                            <h2>Anakin:</h2>
+                            From my point of view, the Jedi are evil!
+                        </div>
+                        <div class="carousel-item">
+                            <h2>Obi-Wan:</h2>
+                            Well, then you are lost!
+                        </div>
+                        <div class="carousel-item">
+                            <h2>Anakin</h2>
+                            This is the end for you, My Master.
+                        </div>
+                        <div class="carousel-item">
+                            <h2></h2>
+                            [ANAKIN jumps and flips onto OBI- WAN's platform.]
+                        </div>
+                        <div class="carousel-item">
+                            <h2></h2>
+                            [OBI-WAN jumps to the hill]
+                        </div>
+                        <div class="carousel-item">
+                            <h2>Obi-Wan:</h2>
+                            It's over, Anakin. I have the high ground.
+                        </div>
+                        <div class="carousel-item">
+                            <h2>Anakin:</h2>
+                            You underestimate my power!
+                        </div>
+                        <div class="carousel-item">
+                            <h2>Obi-Wan:</h2>
+                            Don't try it.
+                        </div>
+                        <div class="carousel-item">
+                            <h2>Luke:</h2>
+                            [ANAKIN jumps, and OBI-WAN rekt his young apprentice.]
+                        </div>
+                        <div class="carousel-item">
+                            <h2>Obi-Wan:</h2>
+                            You were the chosen one!
+                        </div>
+                        <div class="carousel-item">
+                            <h2>Obi-Wan:</h2>
+                            It was said that you would, destroy the Sith, not join them!
+                        </div>
+                        <div class="carousel-item">
+                            <h2>Obi-Wan:</h2>
+                            Bring balance to the Force, not leave it in Darkness!
+                        </div>
+                        <div class="carousel-item">
+                            <h2>Anakin:</h2>
+                            I hate you!
+                        </div>
+                        <div class="carousel-item">
+                            <h2>Obi-Wan:</h2>
+                            You were my brother, Anakin. I loved you.
+                        </div>
+                        <div class="carousel-item">
+                            <h2></h2>
+                            [ANAKIN bursts into flames and starts SCREAMING.]
+                        </div>
+                        <div class="carousel-item">
+                            <h2>Palpatine:</h2>
+                            Master Windu. I take it General Grievous has been destroyed then.
+                        </div>
+                        <div class="carousel-item">
+                            <h2>Palpatine:</h2>
+                            I must say, you're here sooner than expected.
+                        </div>
+                        <div class="carousel-item">
+                            <h2>Mace Windu:</h2>
+                            In the name of the Galactic Senate of the Republic
+                        </div>
+                        <div class="carousel-item">
+                            <h2>Mace Windu:</h2>
+                            you are under arrest, Chancellor.
+                        </div>
+                        <div class="carousel-item">
+                            <h2>Palpatine:</h2>
+                            Are you threatening me, Master Jedi?
+                        </div>
+                        <div class="carousel-item">
+                            <h2>Mace:</h2>
+                            The Senate will decide your fate.
+                        </div>
+                        <div class="carousel-item">
+                            <h2>Palpatine:</h2>
+                            (burst of anger) I am the Senate!
+                        </div>
+                        <div class="carousel-item">
+                            <h2>Mace:</h2>
+                            Not yet!
+                        </div>
+                        <div class="carousel-item">
+                            <h2>Palpatine:</h2>
+                            It's treason, then.
+                        </div>
+                        <div class="carousel-item">
+                            <h2>Palpatine:</h2>
+                            *autistic screeching 760 degrees spin-flip*
+                        </div>
+                        <div class="carousel-item">
+                            <h2>Anakin:</h2>
+                            I don't like sand.
                         </div>
                     </div>
                 </div>
