--- a/Skylt/index.html
+++ b/Skylt/index.html
@@ -7,6 +7,7 @@
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="Fonts/soleto/stylesheet.css"/>
 
     <style>
         .c
@@ -29,7 +30,7 @@
 
         .person-info
         {
-            margin-top: 600px;
+            margin-top: 200px;
         }
 
         body
@@ -54,6 +55,15 @@
             height: 400px;
             max-width: 100%;
         }
+
+        .name
+        {
+            background-image: linear-gradient(to right, #ab058b,indigo);
+        }
+
+
+
+
     </style>
 
 </head>
@@ -64,14 +74,16 @@
 
     <!--    <div style="width:768px; height:1366px; background-color:white;">-->
     <div class="container-fluid">
-        <header>
-            <h1>Hello</h1>
+        <header class="text-center">
+            <object data="Img/ElevHalsaLogo.svg" type="image/svg+xml">
+            </object>
+            Test
         </header>
         <div class="carousel slide person-info" data-ride="carousel" data-pause="false" style="height: 10rem">
             <div class="carousel-inner">
                 <div class="carousel-item active">
                     <div>
-                        <h1>Robin Kastberg</h1>
+                        <h1 class="name">Robin Kastberg</h1>
                     </div>
                     <div class="row">
                         <div class="col">
@@ -84,6 +96,10 @@
                             <img src="Img/Profile/susanne300.jpg" />
                         </div>
                     </div>
+                    <p>
+                        TEL: 000774433<br />
+                        Mail: robin.kastberg@ntig.se
+                    </p>
                 </div>
                 <div class="carousel-item">
                     <div>
