Changed the size of the logo.

--- a/Skylt/index.html
+++ b/Skylt/index.html
@@ -30,7 +30,7 @@
 
         .person-info
         {
-            margin-top: 200px;
+            margin-top: 100px;
         }
 
         body
@@ -61,8 +61,9 @@
             background-image: linear-gradient(to right, #ab058b,indigo);
         }
 
-
-
+        header
+        {
+        }
 
     </style>
 
@@ -75,9 +76,8 @@
     <!--    <div style="width:768px; height:1366px; background-color:white;">-->
     <div class="container-fluid">
         <header class="text-center">
-            <object data="Img/ElevHalsaLogo.svg" type="image/svg+xml">
+            <object data="Img/ElevHalsaLogo.svg" type="image/svg+xml" width="600">
             </object>
-            Test
         </header>
         <div class="carousel slide person-info" data-ride="carousel" data-pause="false" style="height: 10rem">
             <div class="carousel-inner">
